--- a/app/views/deals/sneakers01M.html.erb
+++ b/app/views/deals/sneakers01M.html.erb
@@ -90,10 +90,10 @@
 
          <div class="column_box">
           <div class="flex column shoes_column" onclick="currentSlide(16)">
-            <img src="Image_URL">
+            <img src="https://img.shopstyle-cdn.com/pim/78/83/78839a9a6d99f323733c5acef51c0598_best.jpg">
           </div>
           <div class="flex column shoes_column" onclick="currentSlide(17)">
-            <img src="Image_URL">
+            <img src="https://img.shopstyle-cdn.com/pim/3b/1f/3b1fd955433187c3b68a83cbbb654ce5_best.jpg">
           </div>
           <div class="flex column shoes_column" onclick="currentSlide(18)">
             <img src="Image_URL">
@@ -108,19 +108,19 @@
 
          <div class="column_box">
           <div class="flex column shoes_column" onclick="currentSlide(21)">
-            <img src="Image_URL">
+            <img src="https://img.shopstyle-cdn.com/pim/67/25/67251e0616e651e4dd18054a1f163472_best.jpg">
           </div>
           <div class="flex column shoes_column" onclick="currentSlide(22)">
-            <img src="Image_URL">
+            <img src="https://img.shopstyle-cdn.com/pim/c8/06/c806e52b5bf43d9b2ed0e1cf1c6f76ec_best.jpg">
           </div>
           <div class="flex column shoes_column" onclick="currentSlide(23)">
-            <img src="Image_URL">
+            <img src="https://img.shopstyle-cdn.com/pim/ef/43/ef43fe25854d4c4a88fa1a37de51cee2_best.jpg">
           </div>
           <div class="flex column shoes_column" onclick="currentSlide(24)">
-            <img src="Image_URL">
+            <img src="https://img.shopstyle-cdn.com/pim/f9/c9/f9c943f7deb094b316996675e7179c16_best.jpg">
           </div>
           <div class="flex column shoes_column last_box" onclick="currentSlide(25)">
-            <img src="Image_URL">
+            <img src="https://img.shopstyle-cdn.com/pim/ad/86/ad86bc000bdcccb17601c589a6ab2421_best.jpg">
           </div>
         </div>
 
@@ -464,15 +464,15 @@
             <div class="flex slides clearfix">
               <div class="numbering shoes_numbering">16 / 40</div>
               <div class="inner_wrap shoes_wrap">
-                <div class="img_box"><a target="_blank" href="Shoes_Link"><img src="Image_Link" alt="" /></a></div>
+                <div class="img_box"><a target="_blank" href="https://bit.ly/2X0evp3"><img src="https://img.shopstyle-cdn.com/pim/78/83/78839a9a6d99f323733c5acef51c0598_best.jpg" alt="NIKE Sneakers" /></a></div>
                 <div class="inner shoes_inner">
-                 <h2><a target="_blank" href="Shop_Link">SHoes_Title</a></h2>
-                 <strong>BY Source</strong>
-                 <em>$Reg_Price</em><p class="price">$Dis_Pricec ( Percentage% OFF )</p>
+                 <h2><a target="_blank" href="https://shopstyle.it/l/4X87">NIKE Sneakers</a></h2>
+                 <strong>BY yoox</strong>
+                 <em>$121.00</em><p class="price">$43.00 ( 64% OFF )</p>
                  <address>*Lower price available on select options</address>
-                 <p class="color">Available_Colors</p>
-                 <p class="size">Available_Sizes</p>
-                 <div class="btn"><a target="_blank" href="Shoes_Link">Check it Out on<span>Source</span></a></div>
+                 <p class="color">Available Colors: Military green</p>
+                 <p class="size">Available Sizes: 7.5 , 8</p>
+                 <div class="btn"><a target="_blank" href="https://bit.ly/2X0evp3">Check it Out on<span>yoox.com</span></a></div>
                   <div class="notes"><h5>*Pricing may change and deals can expire fast.</h5><h5>*Condition of color and size may change.</h5></div>
                 </div>
               </div>
@@ -481,15 +481,15 @@
             <div class="flex slides clearfix">
               <div class="numbering shoes_numbering">17 / 40</div>
               <div class="inner_wrap shoes_wrap">
-                <div class="img_box"><a target="_blank" href="Shoes_Link"><img src="Image_Link" alt="" /></a></div>
+                <div class="img_box"><a target="_blank" href="https://bit.ly/2J4OqQQ"><img src="https://img.shopstyle-cdn.com/pim/3b/1f/3b1fd955433187c3b68a83cbbb654ce5_best.jpg" alt="" /></a></div>
                 <div class="inner shoes_inner">
-                 <h2><a target="_blank" href="Shop_Link">SHoes_Title</a></h2>
-                 <strong>BY Source</strong>
-                 <em>$Reg_Price</em><p class="price">$Dis_Pricec ( Percentage% OFF )</p>
+                 <h2><a target="_blank" href="https://shopstyle.it/l/4Ycv">Air Force 1 Low Retro Canvas Sneaker in Black</a></h2>
+                 <strong>BY needsupply</strong>
+                 <em>$130.00</em><p class="price">$64.99 ( 50% OFF )</p>
                  <address>*Lower price available on select options</address>
-                 <p class="color">Available_Colors</p>
-                 <p class="size">Available_Sizes</p>
-                 <div class="btn"><a target="_blank" href="Shoes_Link">Check it Out on<span>Source</span></a></div>
+                 <p class="color">Available Colors: Black/Black-Summit White</p>
+                 <p class="size">Available Sizes: 11.5 , 6 , 6.5</p>
+                 <div class="btn"><a target="_blank" href="https://bit.ly/2J4OqQQ">Check it Out on<span>needsupply.com</span></a></div>
                   <div class="notes"><h5>*Pricing may change and deals can expire fast.</h5><h5>*Condition of color and size may change.</h5></div>
                 </div>
               </div>
@@ -541,6 +541,91 @@
                  <p class="color">Available_Colors</p>
                  <p class="size">Available_Sizes</p>
                  <div class="btn"><a target="_blank" href="Shoes_Link">Check it Out on<span>Source</span></a></div>
+                  <div class="notes"><h5>*Pricing may change and deals can expire fast.</h5><h5>*Condition of color and size may change.</h5></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="flex slides clearfix">
+              <div class="numbering shoes_numbering">21 / 40</div>
+              <div class="inner_wrap shoes_wrap">
+                <div class="img_box"><a target="_blank" href="https://bit.ly/31Oa0Bv"><img src="https://img.shopstyle-cdn.com/pim/67/25/67251e0616e651e4dd18054a1f163472_best.jpg" alt="" /></a></div>
+                <div class="inner shoes_inner">
+                 <h2><a target="_blank" href="https://shopstyle.it/l/4YdL">Nike Court Borough Low Premium</a></h2>
+                 <strong>BY 6pm</strong>
+                 <em>$75.00</em><p class="price">$33.49 ( 55% OFF )</p>
+                 <address>*Lower price available on select options</address>
+                 <p class="color">Available Colors: Black</p>
+                 <p class="size">Available Sizes: 6 D - Medium</p>
+                 <div class="btn"><a target="_blank" href="https://bit.ly/31Oa0Bv">Check it Out on<span>6pm.com</span></a></div>
+                  <div class="notes"><h5>*Pricing may change and deals can expire fast.</h5><h5>*Condition of color and size may change.</h5></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="flex slides clearfix">
+              <div class="numbering shoes_numbering">22 / 40</div>
+              <div class="inner_wrap shoes_wrap">
+                <div class="img_box"><a target="_blank" href="https://bit.ly/2WYppf3"><img src="https://img.shopstyle-cdn.com/pim/c8/06/c806e52b5bf43d9b2ed0e1cf1c6f76ec_best.jpg" alt="" /></a></div>
+                <div class="inner shoes_inner">
+                 <h2><a target="_blank" href="https://shopstyle.it/l/4Yfh">Nike Tanjun Racer</a></h2>
+                 <strong>BY 6pm</strong>
+                 <em>$42.99</em><p class="price">$70.00 ( 39% OFF )</p>
+                 <address>*Lower price available on select options</address>
+                 <p class="color">Available Colors: White , Blue</p>
+                 <p class="size">Available Sizes: 11.5 D - Medium , 14 D - Medium , 15 D - Medium , 10 D - Medium , 10.5 D - Medium , 11 D - Medium</p>
+                 <div class="btn"><a target="_blank" href="https://bit.ly/2WYppf3">Check it Out on<span>6pm.com</span></a></div>
+                  <div class="notes"><h5>*Pricing may change and deals can expire fast.</h5><h5>*Condition of color and size may change.</h5></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="flex slides clearfix">
+              <div class="numbering shoes_numbering">23 / 40</div>
+              <div class="inner_wrap shoes_wrap">
+                <div class="img_box"><a target="_blank" href="https://bit.ly/2X4FoNA"><img src="https://img.shopstyle-cdn.com/pim/ef/43/ef43fe25854d4c4a88fa1a37de51cee2_best.jpg" alt="" /></a></div>
+                <div class="inner shoes_inner">
+                 <h2><a target="_blank" href="https://shopstyle.it/l/4Yhz">Nike Lunar Apparent</a></h2>
+                 <strong>BY 6pm</strong>
+                 <em>$85.00</em><p class="price">$42.50 ( 50% OFF )</p>
+                 <address>*Lower price available on select options</address>
+                 <p class="color">Available Colors: Gray , Black , Blue</p>
+                 <p class="size">Available Sizes: 6 D - Medium , 6.5 D - Medium , 7 D - Medium , 10 D - Medium , 10.5 D - Medium , 11 D - Medium , 11.5 D - Medium , 12.5 D - Medium , 13 D - Medium , 14 D - Medium , 12 D - Medium , 15 D - Medium</p>
+                 <div class="btn"><a target="_blank" href="https://bit.ly/2X4FoNA">Check it Out on<span>6pm.com</span></a></div>
+                  <div class="notes"><h5>*Pricing may change and deals can expire fast.</h5><h5>*Condition of color and size may change.</h5></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="flex slides clearfix">
+              <div class="numbering shoes_numbering">24 / 40</div>
+              <div class="inner_wrap shoes_wrap">
+                <div class="img_box"><a target="_blank" href="https://bit.ly/2X08sB1"><img src="https://img.shopstyle-cdn.com/pim/f9/c9/f9c943f7deb094b316996675e7179c16_best.jpg" alt="" /></a></div>
+                <div class="inner shoes_inner">
+                 <h2><a target="_blank" href="https://shopstyle.it/l/4YhP">Nike Free Trainer V8</a></h2>
+                 <strong>BY 6pm</strong>
+                 <em>$100.00</em><p class="price">$64.99 ( 35% OFF )</p>
+                 <address>*Lower price available on select options</address>
+                 <p class="color">Available Colors: Black , Red , Gray , Olive , Blue</p>
+                 <p class="size">Available Sizes: 11.5 D - Medium , 12 D - Medium , 10.5 D - Medium , 11 D - Medium , 9.5 D - Medium , 10 D - Medium , 14 D - Medium , 7 D - Medium , 12.5 D - Medium , 15 D - Medium , 9 D - Medium , 13 D - Medium</p>
+                 <div class="btn"><a target="_blank" href="https://bit.ly/2X08sB1">Check it Out on<span>6pm.com</span></a></div>
+                  <div class="notes"><h5>*Pricing may change and deals can expire fast.</h5><h5>*Condition of color and size may change.</h5></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="flex slides clearfix">
+              <div class="numbering shoes_numbering">25 / 40</div>
+              <div class="inner_wrap shoes_wrap">
+                <div class="img_box"><a target="_blank" href="https://bit.ly/31QJIi5"><img src="https://img.shopstyle-cdn.com/pim/ad/86/ad86bc000bdcccb17601c589a6ab2421_best.jpg" alt="Nike Free RN 2018 Sun Bleached" /></a></div>
+                <div class="inner shoes_inner">
+                 <h2><a target="_blank" href="https://shopstyle.it/l/4Yh7">Nike Free RN 2018 Sun Bleached</a></h2>
+                 <strong>BY 6pm</strong>
+                 <em>$100.00</em><p class="price">$50.00 ( 50% OFF )</p>
+                 <address>*Lower price available on select options</address>
+                 <p class="color">Available Colors: White , Beige , Blue</p>
+                 <p class="size">Available Sizes: 6 D - Medium , 6.5 D - Medium , 7 D - Medium , 7.5 D - Medium , 8 D - Medium , 8.5 D - Medium , 9.5 D - Medium , 12.5 D - Medium , 15 D - Medium , 9 D - Medium , 12 D - Medium , 14 D - Medium</p>
+                 <div class="btn"><a target="_blank" href="https://bit.ly/31QJIi5">Check it Out on<span>6pm.com</span></a></div>
                   <div class="notes"><h5>*Pricing may change and deals can expire fast.</h5><h5>*Condition of color and size may change.</h5></div>
                 </div>
               </div>
