--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -45,6 +45,186 @@
 <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
 -->
 
+<div class="card clearfix" data-score="35" data-price="64.48">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FvDXNc"><img src="https://images-na.ssl-images-amazon.com/images/I/71rl4rbo1eL._UX425_.jpg" alt="Fitbit Ace, Activity Tracker" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>211 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FvDXNc">Fitbit Ace, Activity Tracker for Kids 8+</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$64.48</span><span class="ori_price">$99.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FvDXNc">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="23" data-price="149.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RC0kFF"><img src="https://images-na.ssl-images-amazon.com/images/I/517xdFrVFHL._SX522_.jpg" alt="Samsung Galaxy Tab E 9.6"" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,197 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>23% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RC0kFF">Samsung Galaxy Tab E 9.6"; 16 GB Wifi Tablet (Black)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$149.99</span><span class="ori_price">$193.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2RC0kFF">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="29" data-price="190.86">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YbJJeb"><img src="https://images-na.ssl-images-amazon.com/images/I/71vTy62FMWL._SX522_.jpg" alt="Planar Helium Touch Screen" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>151 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>29% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YbJJeb">Planar Helium PCT2235 Touch Screen 22" LED LCD Full HD Resolution Monitor with Helium Stand</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$190.86</span><span class="ori_price">$269.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YbJJeb">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="179.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X8bKXK"><img src="https://images-na.ssl-images-amazon.com/images/I/A1b2b%2B%2BBBeL._SX522_.jpg" alt="Marshall Kilburn Portable Bluetooth Speaker" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>910 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X8bKXK">Marshall Kilburn Portable Bluetooth Speaker, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$179.95</span><span class="ori_price">$299.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2X8bKXK">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="43" data-price="73.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YcnkgN"><img src="https://images-na.ssl-images-amazon.com/images/I/71RU7otWqCL._SX522_.jpg" alt="Logitech G613 Lightspeed Wireless Mechanical Gaming Keyboard" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>215 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>43% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YcnkgN">Logitech G613 Lightspeed Wireless Mechanical Gaming Keyboard, Multihost 2.4 GHz + Blutooth Connectivity</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$73.99</span><span class="ori_price">$129.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YcnkgN">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="59.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RAnf3Y"><img src="https://images-na.ssl-images-amazon.com/images/I/61pz6N01NJL._SY879_.jpg" alt="Razer Mamba Elite Wired Gaming Mouse" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>225 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RAnf3Y">Razer Mamba Elite Wired Gaming Mouse: 16,000 DPI Optical Sensor - Chroma RGB Lighting - 9 Programmable Buttons - Mechanical Switches</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$59.99</span><span class="ori_price">$89.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2RAnf3Y">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="20.16">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Fy5b61"><img src="https://images-na.ssl-images-amazon.com/images/I/81K7df10eZL._SX679_.jpg" alt="Maisto R/C Rock Crawler Radio Control Vehicle" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>2,217 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Fy5b61">Maisto R/C Rock Crawler Radio Control Vehicle (Colors May Vary)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$20.16</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Fy5b61">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="62" data-price="37.85">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X6Kmtg"><img src="https://images-na.ssl-images-amazon.com/images/I/81dBysFo1OL._SX679_.jpg" alt="KD Interactive Aura Drone" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3.jpg' %>"><p>120 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>62% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X6Kmtg">KD Interactive Aura Drone with Glove Controller</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$37.85</span><span class="ori_price">$99.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2X6Kmtg">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="55.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xeQIHE"><img src="https://images-na.ssl-images-amazon.com/images/I/91EFX2g2X6L._SX522_.jpg" alt="LEGO Harry Potter" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>202 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xeQIHE">LEGO Harry Potter and The Chamber of Secrets Hogwarts Whomping Willow 75953 Magic Toys Building Kit, Prisoner of Azkaban, Hedwig, Hermoine Granger...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$55.99</span><span class="ori_price">$69.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xeQIHE">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X8fhW0"><img src="https://images-na.ssl-images-amazon.com/images/I/91gD0Y0p2HL._SX679_.jpg" alt="LEGO Fantastic Beasts" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>134 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X8fhW0">LEGO Fantastic Beasts Newt’s Case of Magical Creatures 75952 Building Kit (694 Piece)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$39.99</span><span class="ori_price">$49.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2X8fhW0">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card dealofday clearfix" data-score="50" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2XrHk25"><img src="https://images-na.ssl-images-amazon.com/images/I/81ptGPjuEXL._AC_SR300,300_.jpg" alt="Amazon Deal Of The Day" /></a>
