--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -25,6 +25,220 @@
  <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
 -->
 
+<div class="card clearfix" data-score="50" data-price="18.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FwwQV0"><img src="https://m.media-amazon.com/images/I/611XEzqNpmL._SR400,400_.jpg" alt="Electric Kettle" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>33 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FwwQV0">Electric Kettle, CUSINAID Glass Tea Pot Electric Water Boiler 1.7L Coffee Tea Kettle with BPA Free I LED Light I Auto Shut-Off I Boil-Dry</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.00</span><span class="ori_price">$35.99</span></address>
+      <p><span>Take <strong>50% off at $35.99</strong> with promo code: <strong>50GKETTLE004</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 25, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FwwQV0">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="34" data-price="28.37">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J8c9iR"><img src="https://m.media-amazon.com/images/I/61KK9Hj5u+L._SR400,400_.jpg" alt="Toprime Vacuum Sealer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>78 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>34% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2J8c9iR">Toprime Vacuum Sealer | Automatic Sealing System for Keeping Dry & Moist Food Fresh | Suitable for Sous Vide | Touch Keys | Compact Design...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$28.37</span><span class="ori_price">$42.99</span>
+        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>34% off at $42.99</strong> with promo code: <strong>345YMRMZ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 13, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J8c9iR">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="11.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NnbXC2"><img src="https://m.media-amazon.com/images/I/718DoItP6WL._SR400,400_.jpg" alt="Relefree Microfiber Towel" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>698 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NnbXC2">Relefree Microfiber Towel, 2 Sizes Beach, Sports, Travel, Camping Towel, Quick Dry, Ultra Absorbent, Suitable for Fitness, Camping, Swimming, Running,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.89</span><span class="ori_price">$13.99</span></address>
+      <p><span>Take <strong>15% off at $13.99</strong> with promo code: <strong>15RXK2MT</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 25, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NnbXC2">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="21.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JatrMv"><img src="https://m.media-amazon.com/images/I/61X6T88OoWL._SR400,400_.jpg" alt="Jinri 1875W Professional Salon Hair Dryer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>128 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JatrMv">Jinri 1875W Professional Salon Hair Dryer for Faster Drying, Negative Ion Hair Blow Dryer with 2 Speed and 3 Heat Setting Ceramic Hair Dryer,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.00</span><span class="ori_price">$69.99</span>
+        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <p><span>Take <strong>70% off at $69.99</strong> with promo code: <strong>70PYF1UJ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JatrMv">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="78" data-price="5.72">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X7SuJI"><img src="https://m.media-amazon.com/images/I/716y1yWqUGL._SR400,400_.jpg" alt="Cell Phone Stand" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>199 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>78% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X7SuJI">Cell Phone Stand, Barsone Aluminium Phone Holder Mount Stand for Phones and Tablets 10 inches (Updated Silver)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.72</span><span class="ori_price">$25.98</span></address>
+      <p><span>Take <strong>78% off at $25.98</strong> with promo code: <strong>78C8BQ6T</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 25, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2X7SuJI">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="12.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XzHHrh"><img src="https://m.media-amazon.com/images/I/715MLvZxbgL._SR400,400_.jpg" alt="Coffee Grinder" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>23 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XzHHrh">Coffee Grinder, Kealive Coffee Grinder Electric 12 Cup, Coffee Beans Grinder with Stainless Steel Blades for Fast Grinding Coffee Beans, Nuts, Grains, Spices</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.59</span><span class="ori_price">$17.99</span></address>
+      <p><span>Take <strong>30% off at $17.99</strong> with promo code: <strong>30YI4HD3</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 05, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XzHHrh">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="9.30">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RyWiha"><img src="https://m.media-amazon.com/images/I/81g9xqZ2lkL._SR400,400_.jpg" alt="iPad Mini Keyboard Case" /></a>
+    <div class="rating"><p>0 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RyWiha">iPad Mini Keyboard Case for iPad Mini 5 2019(5th Gen) /ipad Mini 4 / 3/2 /1, ipad Mini Smart Magnetic Case, Ultra Slim Trifold Leather Cover...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.30</span><span class="ori_price">$30.99</span>
+        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <p><span>Take <strong>70% off at $30.99</strong> with promo code: <strong>70XGR7C9</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 25, 2019 at 11:00 AM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2RyWiha">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="20.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xz7XC4"><img src="https://m.media-amazon.com/images/I/71qF9t74xfL._SR400,400_.jpg" alt="3 in 1 Wireless Charging Car Charger Mount" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>26 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xz7XC4">3 in 1 Wireless Charging Car Charger Mount, Newest Auto Clamping Car Vent Phone Holder Qi QC 3.0 Car Chargers 10W/7.5W Fast Charging for Phone,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.50</span><span class="ori_price">$40.99</span>
+        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $40.99</strong> with promo code: <strong>50K7J5VV</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 26, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xz7XC4">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="67.14">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X88snm"><img src="https://m.media-amazon.com/images/I/61Wu7Rn+MRL._SR400,400_.jpg" alt="Housmile Airfryer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>57 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X88snm">Housmile Airfryer, Oilless Air Fryer Oven, 6-in-1 Electric Hot Air Cooker with Temperature Control, Non Stick Basket and Dishwasher Save - 3.7QT</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$67.14</span><span class="ori_price">$78.99</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>15% off at $78.99</strong> with promo code: <strong>15LUT3EN</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 10, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2X88snm">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ya3WRv"><img src="https://m.media-amazon.com/images/I/51MlMRri0pL._SR400,400_.jpg" alt="YinQin 400ML Ultrasonic Aroma Diffuser" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>31 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ya3WRv">YinQin 400ML Ultrasonic Aroma Diffuser Essential Oil Diffuser Quiet Cool Mist Humidifier with 7-Color LED Lights Changing Aromatherapy for ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.99</span><span class="ori_price">$49.98</span>
+        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <p><span>Take <strong>60% off at $49.98</strong> with promo code: <strong>60V49F1V</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 25, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Ya3WRv">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="10" data-price="35.09">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2IItgck"><img src="https://m.media-amazon.com/images/I/618muoSRZrL._SR400,400_.jpg" alt="COSOOS Fastest Charging Station" /></a>
