--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -43,6 +43,8 @@
 
 <!-- 
 <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+
+<p>run out of stock soon</p>
 -->
 
 <div class="card clearfix" data-score="35" data-price="64.48">
@@ -114,7 +116,7 @@
       <em>*Average rating and Reviews may change after the best deals updated date.</em>
     </div>
   </div> 
-  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2X8bKXK">Shop Now at Amazon</a></div>
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2X8bKXK">Shop Now at Amazon</a><p>run out of stock soon</p></div>
 </div>
 
 <div class="card clearfix" data-score="43" data-price="73.99">
