--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -251,10 +251,11 @@
 .guide_show .slides .inner_wrap .inner h2 a{text-decoration:none;color:#000;}
 .guide_show .slides .inner_wrap .inner h2 a:hover{text-decoration:underline;}
 .guide_show .slides .inner_wrap .inner strong{font-size:14px;color:#ccc;font-weight:100;text-transform:uppercase;}
-.guide_show .slides .inner_wrap .inner em{display:block;margin-top:20px;font-weight:bold;font-size:20px;text-decoration:line-through;}
-.guide_show .slides .inner_wrap .inner p{font-weight:bold;font-size:20px;display:block;margin-bottom:5px;}
+.guide_show .slides .inner_wrap .inner em{display:block;margin-top:30px;font-weight:bold;font-size:20px;text-decoration:line-through;}
+.guide_show .slides .inner_wrap .inner p{font-weight:bold;font-size:20px;display:block;margin-bottom:60px;}
 .guide_show .slides .inner_wrap .inner .color{margin-bottom:0;font-weight:400;font-size:15px;color:#616161;}
 .guide_show .slides .inner_wrap .inner .size{font-weight:400;font-size:15px;color:#616161;margin-bottom:50px;}
+.guide_show .slides .inner_wrap .inner .btn{}
 .guide_show .slides .inner_wrap .inner .btn a {text-decoration:none;background:#000;color:#fff;padding:15px 35px;margin-top:30px;font-weight:bold;}
 .guide_show .slides .inner_wrap .inner .btn a span{color:#08f;margin-left:5px;text-transform:uppercase;}
 .guide_show .slides .inner_wrap .inner .notes{margin-top:15px;}
