--- a/app/views/guides/gift_guide_01.html.erb
+++ b/app/views/guides/gift_guide_01.html.erb
@@ -96,7 +96,9 @@
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
-              <a href="#n">Check it Out on <span>Amazon</span></a>
+              <div class="btn">
+                <a href="#n">Check it Out on <span>Amazon</span></a>
+              </div>
             </div>
           </div>
         </div>
@@ -112,7 +114,9 @@
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
-              <a href="#n">Check it Out on <span>Amazon</span></a>
+              <div class="btn">
+                <a href="#n">Check it Out on <span>Amazon</span></a>
+              </div>
             </div>
           </div>
         </div>
@@ -128,7 +132,9 @@
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
-              <a href="#n">Check it Out on <span>Amazon</span></a>
+              <div class="btn">
+                <a href="#n">Check it Out on <span>Amazon</span></a>
+              </div>
             </div>
           </div>
         </div>
@@ -144,7 +150,9 @@
               <strong>BY AMAZON</strong>
               <em>$100.00</em>
               <p>$70.00 (30% OFF)</p>
-              <a href="#n">Check it Out on <span>Amazon</span></a>
+              <div class="btn">
+                <a href="#n">Check it Out on <span>Amazon</span></a>
+              </div>
             </div>
           </div>
         </div>
