--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -25,6 +25,110 @@
  <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
 -->
 
+<div class="card clearfix" data-score="15" data-price="55.24">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NeFqxX"><img src="https://m.media-amazon.com/images/I/91MmzfjBi-L._SR400,400_.jpg" alt="Memory Foam Dog Bed" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>858 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NeFqxX">BarkBox Orthopedic Ultra Plush Pressure-Relief Memory Foam Dog Bed or Crate Mat S/Med/Large/XL, 4 Colors | Removable Washable Cover, Squeaker...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$55.24</span><span class="ori_price">$64.99</span></address>
+      <p><span>Take <strong>15% off at $64.99</strong> with promo code: <strong>15V2K6HU</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NeFqxX">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="9.06">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XaK7x0"><img src="https://m.media-amazon.com/images/I/71+T-rmotvL._SR400,400_.jpg" alt="Zulay Premium Quality Knife Sharpener" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,102 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XaK7x0">Zulay Premium Quality Knife Sharpener for Straight and Serrated Knives Stainless Steel Ceramic and Tungsten - Easy Manual Sharpening...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.06</span><span class="ori_price">$12.95</span></address>
+      <p><span>Take <strong>30% off at $12.95</strong> with promo code: <strong>30KQ2CE3</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XaK7x0">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="10.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J2WfGE"><img src="https://m.media-amazon.com/images/I/71Gjq5VznuL._SR400,400_.jpg" alt="Mosteck Tactical Flashlight Super Bright LED" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>10 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2J2WfGE">Fashlight, Mosteck Tactical Flashlight Super Bright LED Flashlight CREE XML2 LED American Chip, Water Resistant Handheld Flashlights High Lumen with ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.49</span><span class="ori_price">$20.99</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $20.99</strong> with promo code: <strong>50YSA2BT</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J2WfGE">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="20.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2X5zxrc"><img src="https://m.media-amazon.com/images/I/71cMRsSuDvL._SR400,400_.jpg" alt="Electric Kettle Temperature Control" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>72 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2X5zxrc">Electric Kettle Temperature Control, CUSIBOX 1.5L Double Wall 100% Stainless Steel Water Kettle with Keep Warm Function, 1500W Fast Boil Cordless Tea Kettle...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.00</span><span class="ori_price">$49.99</span>
+        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <p><span>Take <strong>60% off at $49.99</strong> with promo code: <strong>60EKETTLE002</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 03, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2X5zxrc">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="15.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xb6q5O"><img src="https://m.media-amazon.com/images/I/51GeMuLpM1L._SR400,400_.jpg" alt="DADYPET Cat Water Fountain" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>101 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xb6q5O">DADYPET Cat Water Fountain,Pet Water Fountain Dispenser, Super Quite Flower Drinking Fountain, Automatic Electric Water Feeder for Dogs, Cats, Birds,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.20</span><span class="ori_price">$37.99</span></address>
+      <p><span>Take <strong>60% off at $37.99</strong> with promo code: <strong>60P8FD4I</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 28, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xb6q5O">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="60" data-price="22.80">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Nek8R2"><img src="https://m.media-amazon.com/images/I/61Ul-3ouZrL._SR400,400_.jpg" alt="Aiugko USB C Hub 9-in-1 USB C Adapter" /></a>
