--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -25,6 +25,215 @@
  <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
 -->
 
+<div class="card clearfix" data-score="50" data-price="15.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Je1kMe"><img src="https://m.media-amazon.com/images/I/31k14VOrLNL._SR400,400_.jpg" alt="iPhone X Charger Case" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>64 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Je1kMe">iPhone X Charger Case Slim - XREXS Portable Protective Backup Power Bank, 4000mAh Rechargeable Charging Case for iPhone X/iPhone 10,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.49</span><span class="ori_price">$30.99</span></address>
+      <p><span>Take <strong>50% off at $30.99</strong> with promo code: <strong>50LIIBPJ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 25, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Je1kMe">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="27.29">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XrqlwT"><img src="https://m.media-amazon.com/images/I/61WKzo7laQL._SR400,400_.jpg" alt="Wireless Car Charger" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>121 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XrqlwT">Wireless Car Charger, 2019 Newest 10W Qi Fast Charging Car Charger Mount Phone Holder Automatic Clamping,Compatible for iPhone XS MAX/XR/XS/X/8Plus/8,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$27.29</span><span class="ori_price">$38.99</span></address>
+      <p><span>Take <strong>30% off at $38.99</strong> with promo code: <strong>30OPZ89E</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 26, 2019 at 08:00 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XrqlwT">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="17.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XzcgNJ"><img src="https://m.media-amazon.com/images/I/61zM2qaegvL._SR400,400_.jpg" alt="Bluetooth Sleep Eye Mask Wireless Headphones" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>441 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XzcgNJ">Bluetooth Sleep Eye Mask Wireless Headphones, TOPOINT Upgrade Sleeping Travel Music Eye Cover Bluetooth Headsets with Microphone Handsfree, Long Play Time,..</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.49</span><span class="ori_price">$24.99</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>30% off at $24.99</strong> with promo code: <strong>30111VQ9</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 20, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XzcgNJ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="20.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Rz9gM3"><img src="https://m.media-amazon.com/images/I/51WvbA1WwDL._SR400,400_.jpg" alt="GREEN MOUNT 50ft Expandable Garden Hose" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>1 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Rz9gM3">GREEN MOUNT 50ft Expandable Garden Hose, Lightweight Flexible Water Hose with 8 Function Spray Nozzle, Ultimate Non Kink Hose Easy to Storage</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.39</span><span class="ori_price">$33.99</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>40% off at $33.99</strong> with promo code: <strong>40H73PQ3</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Rz9gM3">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="10.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XwtP0P"><img src="https://m.media-amazon.com/images/I/41UTgkt+lgL._SR400,400_.jpg" alt="Mini Desktop/Table Fan with Night Light" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>10 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XwtP0P">Mini Desktop/Table Fan with Night Light, Portable Strong Wind Desk Cooling Fan with LED Light for Office Home Kids Baby's Room Bedroom - White</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.40</span><span class="ori_price">$25.99</span></address>
+      <p><span>Take <strong>60% off at $25.99</strong> with promo code: <strong>60ECOMX5</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 27, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XwtP0P">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="18.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Fy4Vno"><img src="https://m.media-amazon.com/images/I/81QLneFtXTL._SR400,400_.jpg" alt="Bdcoco Women's Cowl Neck Long Sleeve Casual" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>134 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Fy4Vno">Bdcoco Women's Cowl Neck Long Sleeve Casual Tunic Sweatshirt Tops with Pockets</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.19</span><span class="ori_price">$25.99</span></address>
+      <p><span>Take <strong>30% off at $25.99</strong> with promo code: <strong>302X65DT</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 27, 2019 at 08:00 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Fy4Vno">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="34.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XbjhVw"><img src="https://m.media-amazon.com/images/I/71bQhsJcBzL._SR400,400_.jpg" alt="DETLEV PRO Cordless Drill Driver" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>34 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XbjhVw">DETLEV PRO Cordless Drill Driver 21V Electric Screwdriver 2 Speed Max Torque 372In-lbs 43pcs Accessories 1.5Ah Lithium Ion with LED, 8104</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$34.99</span><span class="ori_price">$49.99</span></address>
+      <p><span>Take <strong>30% off at $49.99</strong> with promo code: <strong>30W6ZF9Z</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 26, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XbjhVw">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NevvID"><img src="https://m.media-amazon.com/images/I/71ilGvSyeHL._SR400,400_.jpg" alt="SONGMICS Ultra-Lightweight & Portable Hammock" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>189 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NevvID">SONGMICS Ultra-Lightweight & Portable Hammock Hold up to 660LB Single & Double Parachute Nylon Camping Hammock Swing Bed 118'' x 78'' for Outdoor Backpacking,..</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$14.99</span>
+        <div class="tooltip_red"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <p><span>Take <strong>20% off at $14.99</strong> with promo code: <strong>20T2FDB5</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 05, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NevvID">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RCfGK6"><img src="https://m.media-amazon.com/images/I/71umeLQ4JDL._SR400,400_.jpg" alt="GEMITTO Car Back Seat Protector" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-Rating_Num.jpg' %>"><p>Review_Num Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RCfGK6">GEMITTO Car Back Seat Protector, Waterproof Multiple Pockets Backseat Organizer with ipad and Tablet Holder, Adjustable Straps for Universal Fit,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>40% off at $19.99</strong> with promo code: <strong>40BWVN9Z</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2RCfGK6">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="16.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XAJZ9y"><img src="https://m.media-amazon.com/images/I/613X2mORWXL._SR400,400_.jpg" alt="MARNUR Fitness Tracker" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>42 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XAJZ9y">MARNUR Fitness Tracker CHR with Heart Rate Monitor 4 Screen Display Modes Waterproof 5 in 1 Smart Bracelet Built-in USB Plug Activity Tracker</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.00</span><span class="ori_price">$39.99</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>60% off at $39.99</strong> with promo code: <strong>60UOQQK7</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XAJZ9y">Use Code at Amazon</a></div>
+</div>
+
+
 <div class="card clearfix" data-score="15" data-price="55.24">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2NeFqxX"><img src="https://m.media-amazon.com/images/I/91MmzfjBi-L._SR400,400_.jpg" alt="Memory Foam Dog Bed" /></a>
