--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -10,8 +10,8 @@
   <button class="gnb_open_b"><img src="<%=asset_path 'open_black.png' %>" alt="open" /></button>
     <div class="sub_nav_pc">
       <ul class="clearfix">
-          <li><a href="/deals/promo_codes">Promo Codes</a></li>
           <li><a href="/deals/bestdeals">Best Deals</a></li>
+          <li><a href="/deals/promo_codes">Promo Codes</a></li>          
           <!-- <li><a href="/deals/coupons">Sales & Coupons</a></li> -->
           <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
           <li><a href="/deals/quick_search">Quick Search</a></li>
@@ -21,8 +21,8 @@
     
     <div class="gnb_m">
       <ul class="clearfix">
+        <li><a href="/deals/bestdeals">BEST DEALS,</a></li>
         <li><a href="/deals/promo_codes">PROMO CODES,</a></li>
-        <li><a href="/deals/bestdeals">BEST DEALS</a></li>
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <li><a href="/deals/quick_search">QUICK SEARCH,</a></li>
