--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
       <ul class="clearfix">
         <li><a href="/categories/">CATEGORY<span>,</span></a></li>
         <li><a href="/recommends/">FEATURED<span>,</span></a></li>
-        <li><a href="/deals/promo_codes">DEALS <em>of Amazon</em></a></li>
+        <li><a href="/deals/bestdeals">DEALS <em>of Amazon</em></a></li>
       </ul>      
     </div>
     
@@ -20,7 +20,7 @@
         <li><a href="/">HOME<span>,</span></a></li> 
         <li><a href="/categories/">CATEGORY<span>,</span></a></li>
         <li><a href="/recommends/">FEATURED<span>,</span></a></li>
-        <li><a href="/deals/promo_codes">DEALS <em>of Amazon</em></a></li>
+        <li><a href="/deals/bestdeals">DEALS <em>of Amazon</em></a></li>
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="모바일 메뉴 닫기" /></button>
       
