--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -190,7 +190,7 @@
 <div class="card clearfix" data-score="20" data-price="262.90">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2RCdSkj"><img src="https://images-na.ssl-images-amazon.com/images/I/91y16ZXfBvL._SX522_.jpg" alt="Graco 4Ever 4-in-1 Car Seat" /></a>
-    <div class="rating"><img src="<%= asset_path 'star-Rating_Num.jpg' %>"><p>Review_Num Amazon Reviews</p></div>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>30 Amazon Reviews</p></div>
   </div>
   <div class="inner">
     <span class="regular"><em>20% OFF</em> + free shipping</span>
